@@ -55,18 +55,21 @@
 
     <div class="container-fluid main-block">
         <div class="main-block-content">
-            <div class="row">
-                <div class="product-image col-md-6 col-sm-6 col-6">
-                    <img src="img/weboost_drive.png" alt="weboost product" class="img-fluid">
+            <div class="product">
+                <div class="row">
+                        <div class="product-image col-md-6 col-sm-6 col-6">
+                            <img src="img/weboost_drive.png" alt="weboost product" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="product-description">
+                        <div class="row">    
+                            <h1>We Help You Reconnect.</h1>
+                        </div>            
+                        <a href="https://ekhocomm.com/collections/car-truck-rv/products/drive-4g-x-470510" class="row">
+                            <button class="col-md-2 col-6">See in Store</button>
+                        </a> 
+                    </div>
                 </div>
-            </div>
-            <div class="product-description">
-                <div class="row">    
-                    <h1>We Help You Reconnect.</h1>
-                </div>            
-                <a href="https://ekhocomm.com/collections/car-truck-rv/products/drive-4g-x-470510" class="row">
-                    <button class="col-md-2 col-6">See in Store</button>
-                </a> 
             </div>
         </div>
     </div>
